Added Terrain To Git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+#Prescription Wars custom ignore list
+Planet Terrain.asset
+Planet Terrain.asset.meta
+Assets/Terrain/Planet Terrain.asset
+Assets/Terrain/Planet Terrain.asset.meta
